--- a/assets/css/project-details.css
+++ b/assets/css/project-details.css
@@ -105,3 +105,58 @@
         }
     }
 }
+
+/* Project Inquiry Container  */
+.project-inquiry-section {
+    padding: 128px 0 180px;
+
+    .container {
+        .project-inquiry-container {
+            .fakeBtn-gray {}
+
+            .inquiry-card-main-container {
+                margin-top: 20px;
+                display: grid;
+                grid-template-columns: 60% 40%;
+                gap: 20px;
+
+                .project-info-container {
+                    .inquiry-heading {
+                        font-size: 60px;
+                        line-height: 120px;
+                    }
+
+                    .info-content {}
+
+                    .info-icon-list {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 20px;
+                        margin-top: 20px;
+
+                        .info-icon-item {
+                            display: flex;
+                            gap: 16px;
+
+                            .icon-image {
+                                img {
+                                    width: 20px;
+                                }
+                            }
+
+                            p {}
+                        }
+                    }
+                }
+
+                .project-form-image {
+                    img {
+                        aspect-ratio: 650/ 532;
+                        width: 100%;
+                        margin-top: 65px;
+                    }
+                }
+            }
+        }
+    }
+}
