--- a/assets/css/project-details.css
+++ b/assets/css/project-details.css
@@ -106,6 +106,13 @@
     }
 }
 
+.project-details-page-content-wrapper {
+    background-color: #faf6f2;
+    padding-bottom: 125px;
+    background: linear-gradient(180deg, #faf6f2 1.85%, #faf6f2 97.46%);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 96%);
+}
+
 /* Project Inquiry Container  */
 .project-inquiry-section {
     padding: 128px 0 180px;
@@ -121,22 +128,23 @@
                 gap: 20px;
 
                 .project-info-container {
-                    .inquiry-heading {
-                        font-size: 60px;
-                        line-height: 120px;
+                    h2 {
+                        margin: 10px 0 30px;
                     }
 
-                    .info-content {}
+                    .info-content {
+                        line-height: 30px;
+                    }
 
                     .info-icon-list {
                         display: flex;
                         flex-direction: column;
-                        gap: 20px;
+                        gap: 16px;
                         margin-top: 20px;
 
                         .info-icon-item {
                             display: flex;
-                            gap: 16px;
+                            gap: 12px;
 
                             .icon-image {
                                 img {
@@ -144,8 +152,14 @@
                                 }
                             }
 
-                            p {}
+                            p {
+                                font-weight: 600;
+                            }
                         }
+                    }
+
+                    .btn-skin {
+                        margin-top: 30px;
                     }
                 }
 
@@ -157,6 +171,103 @@
                     }
                 }
             }
+        }
+    }
+}
+
+.single-card {
+    background-color: #FFFFFF;
+}
+
+@media (max-width: 992px) {
+    .project-inquiry-section {
+        padding: 80px 0 120px;
+
+        & .container {
+            & .project-inquiry-container {
+                .inquiry-card-main-container {
+                    grid-template-columns: 1fr;
+
+                    .project-info-container {
+                        h2 {
+                            margin: 5px 0 20px;
+                        }
+
+                        .inquiry-heading {
+                            font-size: 46px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 584px) {
+    .project-inquiry-section {
+        padding: 60px 0 80px;
+
+        & .container {
+            & .project-inquiry-container {
+                .inquiry-card-main-container {
+                    grid-template-columns: 1fr;
+
+                    .project-info-container {
+                        .inquiry-heading {
+                            font-size: 46px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    .project-details-page-content-wrapper {
+        padding-bottom: 80px;
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 98%);
+    }
+
+    .c_gallery-container {
+        & .container {
+            & .c_view-gallery-swiper-wrapper {
+                & .c_gallery_view_swiper {
+                    border-radius: 16px;
+
+                    & .swiper-wrapper {
+                        & .swiper-slide {
+                            & .c_view-gallery-slide-container {
+                                img {
+                                    border-radius: 16px;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    .c_gallery-container {
+        & .container {
+            & .c_view-gallery-btns-swiper-wrapper {
+                & .c_view_gallery-btns-swiper {
+                    border-radius: 14px;
+
+                    & .swiper-wrapper {
+                        border-radius: 14px;
+
+                        .swiper-slide {
+                            border-radius: 14px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    .c_gallery-container {
+        .container {
+            gap: 7px;
         }
     }
 }
